# ATMTool

./: CMakeLists.txt  README.md
include/: utils.h
include/atm/: atm_decode.h  atm_encode.h  atm_header.h
include/crypto/: hc128.h
src/: main.c
src/atm/: atm_decode.c  atm_encode.c  atm_header.c
src/crypto/: hc128.c
toolchains/: win64-mingw32.cmake
